--- a/src/USZDashboard/wwwroot/lib/adf-widget-clock/sample/index.html
+++ b/src/USZDashboard/wwwroot/lib/adf-widget-clock/sample/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -38,9 +38,9 @@
       </div>
     </div>
 
-    <div class="container" ng-controller="dashboardController">
+    <!--<div class="container" ng-controller="dashboardController">
       <adf-dashboard name="widgetSampleDashboard" structure="4-8" adf-model="dashboard.model" />
-    </div>
+    </div>-->
 
     <!-- bower:js -->
     <!-- endbower -->
